# RTSGame

./: .gitignore  CMakeLists.txt  README.md
RTSSolution/: RTSSolution.sln
RTSSolution/RTSProject/: RTSProject.vcxproj  RTSProject.vcxproj.filters
RTSSolution/RTSProject/doc/diagrams/: Untitled Diagram.drawio
RTSSolution/RTSProject/doc/licences/: Qt.txt  inspirations.txt  licenses.txt
RTSSolution/RTSProject/doc/scratch/: buildings.txt  map.txt  military units.txt
RTSSolution/RTSProject/src/: Building.cpp  Building.h  MapUnit.cpp  RTS.cpp  RTS.h  RangedWeapon.cpp  RangedWeapon.h  RenderObject.h  Texture.cpp  TextureObject.h  Villager.h  main.cpp
doc/diagrams/: Untitled Diagram.xml
doc/licences/: OpenGL Window Example.txt  inspirations.txt  licenses.txt
doc/scratch/: buildings.txt  map.txt  military units.txt
src/: Animal.cpp  Animal.h  Human.cpp  Human.h  MapUnit.cpp  MapUnit.h  Monster.cpp  Monster.h  MoveableUnit.cpp  MoveableUnit.h  OpenGLWindow.cpp  OpenGLWindow.h  QOpenGLWindow.cpp  QOpenGLWindow.h  RTS.cpp  RenderObject.cpp  Texture.cpp  Texture.h  TextureObject.cpp  Unit.cpp  Unit.h  Villager.cpp  Villager.h  Weapon.cpp  Weapon.h  main.cpp  mockwindow.cpp  mockwindow.h  rts.cpp  rts.h
